reset button added.

--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -87,12 +87,12 @@
             <!--            </div>-->
 
             <div class="mt-4 flex flex-column md:flex-row align-items-start md:align-items-center w-full gap-3 justify-content-end">
-              <div>
-                <button [disabled]="!this.studentForm.valid" (click)="onClickOfAddNewStudent()" class="w-full md:w-10rem" pButton
+              <div class="w-full md:w-6">
+                <button [disabled]="!this.studentForm.valid" (click)="onClickOfAddNewStudent()" class="w-full" pButton
                         label="Save"></button>
               </div>
-              <div>
-                <button pButton class="p-button-secondary p-button-outlined w-full md:w-10rem" (click)="onFormReset()"  label="Reset"></button>
+              <div class="w-full md:w-6">
+                <button pButton class="p-button-secondary p-button-outlined w-full" (click)="onFormReset()"  label="Reset"></button>
               </div>
             </div>
 
